--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+    "root": true,
     "env": {
         "browser": true,
         "es2021": true
@@ -8,11 +9,15 @@
         "standard",
         "prettier"
     ],
+    "parser": "@babel/eslint-parser",
     "parserOptions": {
+        "babelOptions": {
+            "configFile": "./.babelrc"
+        },
         "ecmaFeatures": {
             "jsx": true
         },
-        "ecmaVersion": 12,
+        "ecmaVersion": 2021,
         "sourceType": "module"
     },
     "plugins": [
