--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "proxy": "http://localhost:4000",
   "devDependencies": {
+    "@babel/eslint-parser": "^7.14.5",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
