Added format and linting scripts

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,5 +24,10 @@
         "react"
     ],
     "rules": {
+    },
+    "settings": {
+        "react": {
+            "version": "17.0.2"
+        }
     }
 }
