--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write src/.",
-    "lint": "eslint --fix src/."
+    "lint": "eslint --fix src/.",
+    "cypress": "npm run start & cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +48,7 @@
   "proxy": "http://localhost:4000",
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.5",
+    "cypress": "^7.7.0",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
