--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:4000",
+  "proxy": "https://seis-api-prod.azurewebsites.net/",
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.5",
     "cypress": "^7.7.0",
