--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:4000",
+  "proxy": "https://seis-api-dev.azurewebsites.net",
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.5",
     "eslint": "^7.29.0",
