--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "local-web-server": "^5.1.1",
+    "node": "^17.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
@@ -21,7 +22,7 @@
     "web-vitals": "^1.1.2"
   },
   "engines": {
-    "node": "12.16.2",
+    "node": "16.13.1",
     "npm": "7.19.1"
   },
   "scripts": {
