--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
-    "prettier": "2.3.1"
+    "prettier": "2.3.1",
+    "serve": "^13.0.2"
   }
 }
